Delete config (#34)
* /delete /api/configuration

Should fix #32

* doc(readme) : Document how to generate a single file

* Forgot the required properties in default model

* Move Roles definition into definitions.yaml

* /api/update : to change information about user

* Optional update of the password
